tests/snapshots/pulldown_cmark__markdown-it_modified.snap
---
source: tests/pulldown_cmark.rs
expression: "parsed.join(\"\")"

---
  Advertisement :) 
    pica   - high quality and fast image resize in browser.    babelfish   - developer friendly i18n with plurals support and easy syntax.  You will like those projects!
 h1 Heading 8-)
h2 Heading
h3 Heading
h4 Heading
h5 Heading
h6 Heading
Horizontal Rules
   quotation marks
"Smartypants, double quotes" and 'single quotes'
Emphasis
 This is bold text 
 This is bold text 
 This is italic text 
 This is italic text 
 Strikethrough 
Blockquotes
 Blockquotes can also be nested...
 ...by using additional greater-than signs right next to each other...
 ...or with spaces between arrows.
   Lists
Unordered
  Create a list by starting a line with 
+
, 
-
, or 
*
  Sub-lists are made by indenting 2 spaces:  Marker character change forces new list start:  Ac tristique libero volutpat at    Facilisis in pretium nisl aliquet    Nulla volutpat aliquam velit      Very easy!  Ordered
  Lorem ipsum dolor sit amet
  Consectetur adipiscing elit
  Integer molestie lorem at massa
  You can use sequential numbers...
  ...or keep all the numbers as 
1.

  Start numbering with offset:
  foo  bar  Code
Inline 
code

Indented code
Block code "fences"
Syntax highlighting
Tables
   Option  Description    data  path to data files to supply the data that will be passed into templates.    engine  engine to be used for processing templates. Handlebars is the default.    ext  extension to be used for dest files.   Right aligned columns
   Option  Description    data  path to data files to supply the data that will be passed into templates.    engine  engine to be used for processing templates. Handlebars is the default.    ext  extension to be used for dest files.   Links
 link text 
 link with title 
 ref link 
Autoconverted link https://github.com/nodeca/pica (enable linkify to see)
Images
 Minion   Stormtroopocat 
Like links, Images also have a footnote style syntax
 Alt text 
With a reference later in the document defining the URL location:
Plugins
The killer feature of 
markdown-it
 is very effective support of  syntax plugins .
 Emojies 
 Classic markup: :wink: :crush: :cry: :tear: :laughing: :yum:
Shortcuts (emoticons): :-) :-( 8-) ;)
 see  how to change output  with twemoji.
 Subscript  /  Superscript 
  19^th^  H~2~O   <ins> 
++Inserted text++
 <mark> 
==Marked text==
 Footnotes 
Footnote 1 link .
Footnote 2 link .
Inline footnote^[Text of inline footnote] definition.
Duplicated footnote reference .
 Footnote  can have markup 
  Footnote text.
  Definition lists 
Term 1
:   Definition 1 with lazy continuation.
Term 2 with  inline markup 
:   Definition 2
 Compact style: 
Term 1 ~ Definition 1
Term 2 ~ Definition 2a ~ Definition 2b
 Abbreviations 
This is HTML abbreviation example.
It converts "HTML", but keep intact partial entries like "xxxHTMLyyy" and so on.
*[HTML]: Hyper Text Markup Language
 Custom containers 
::: warning  here be dragons  :::

